--- a/style/global.css
+++ b/style/global.css
@@ -1,4 +1,4 @@
-@import url('assets/FontsFree-Net-SFProText-Regular.ttf');
+@import url('../assets/FontsFree-Net-SFProText-Regular.ttf');
 *{
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@
     --faded-color:#3d3c0a;
     --secondary-color:#808080;
     --background-color:#fff;
-    --top-nav-bg:#ECEB98;
+    --top-nav-bg:#98bfec;
     --font-size:0.95rem;
     --font-medium:1.2rem;
     --font-large: 3.2rem;
@@ -26,7 +26,7 @@
     --faded-color:#3d3c0a;
     --secondary-color:#808080;
     --background-color:#1c1d1f;
-    --top-nav-bg:#ECEB98;
+    --top-nav-bg:#98bfec;
     --font-size:0.95rem;
     --font-medium:1.2rem;
     --font-large: 3.2rem;
@@ -34,7 +34,7 @@
     --pri-font-weight:300;
     --bold-font-weight:bold;
     --large-padding:1rem;
-    background-color:#1f1f1f;
+    background-color:#1C1D1F;
 }
 .dark-theme .icon{
     filter:invert();
