--- a/style/index.css
+++ b/style/index.css
@@ -11,22 +11,7 @@ body {
     margin: auto;
     margin-bottom: 0.5rem;
   }
-  #b2 {
-    width:var(--main-width);
-    margin: auto;
-    margin-bottom: 4rem;
-    position: relative;
-  }
-  #text {
-    position: absolute;
-    z-index: 1;
-    left: 5rem;
-    top: 4rem;
-    width: 40%;
-    /* height: 5rem; */
-    background-color: white;
-    padding: 2rem;
-  }
+  
   #cat11 {
     position: absolute;
     width: 100%;
@@ -107,6 +92,9 @@ body {
     width: 5rem;
     font-weight: bold;
   }
+  .main-slide{
+    width:200%;
+  }
   #z1 {
     margin-bottom: 2.5rem;
     width: var(--main-width);
@@ -162,6 +150,52 @@ body {
     padding: 0.3rem;
     width: 6rem;
   }
-  img {
-    /* width: 100%; */
+/* //////// */
+  .container {
+    width: var(--main-width);
+    height: 500px;
+    margin: 50px auto;
+    position: relative;
+    overflow: hidden;
   }
+  .post {
+    background-color: white;
+    position: absolute;
+    left:  var(--main-width);
+    width: var(--main-width);
+    height: 400px;
+    transition: 2s;
+  }
+  .post:nth-of-type(1) {
+    left: 0;
+  }
+  .img {
+    width: 100%;
+    height: 450px;
+  }
+  .img img {
+    width: 100%;
+    height: 100%;
+  }
+  .container h1 {
+    height: 100px;
+    overflow: hidden;
+  }
+  .box {
+    width: 150px;
+    margin: 20px auto;
+  }
+  .box div {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border: solid 2px aquamarine;
+    border-radius: 50%;
+  }
+  .slide-text{
+    margin-top: 50px;
+    margin-left: 40px;
+    position:absolute;
+    
+  }
+  
