--- a/style/course-list.css
+++ b/style/course-list.css
@@ -90,3 +90,83 @@
     transform: rotate(180deg);
     filter:invert();
 }
+#recom {
+    width: var(--main-width);
+    margin: auto;
+    height: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    font-weight: bold;
+   margin-top: 20px;
+   margin-bottom: 20px;
+  }
+  .recom1 {
+    border: 1px solid black;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .course-title{
+    margin-top:50px !important;
+}
+/* ////////////// */
+
+.hover-div2{
+    position:absolute;
+   border:1px solid rgba(126, 126, 126, 0.541);
+    top: 0%;
+    width: 300px;
+    height: 220px;
+    background-color:var(--background-color);
+    left: 161%;
+    z-index: 99999;
+    padding:10px;
+    transform:translate(-50%,0%);
+    transition: display 0,5s ease;
+}
+.slide-div{
+    position: relative;
+}
+.tick2{
+    width: 10px !important;
+    margin-right: 10px;
+    margin-top: 10px;
+    opacity: 70%;
+}
+.hover-div2 h4{
+   font-size: 15px;
+   margin-left: 22px;
+}
+.cart-div2{
+    display: flex;
+    justify-content:center;
+    width: 100%;
+}
+.cart-div2 button{
+    height:40px;
+    background-color: #A537F0;
+    color:white;
+    border:none;
+    width: 90%;
+    cursor: pointer;
+}
+.hover-div2 p{
+    margin: 14px 0;
+   font-size: 10px;
+   color:var(--secondary-color);
+}
+.hover-div2::before{
+    content: '';
+    position:absolute;
+    width: 0; 
+    top: 50%;
+    left: -5%;
+    transform: translate(0,-50%) rotate(90deg);
+    height: 0; 
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    /* border-top: 10px solid red; */
+    border-top: 10px solid var(--background-color);
+}
