--- a/style/navbar.css
+++ b/style/navbar.css
@@ -221,3 +221,16 @@ section{
     border-radius: 50%;
     padding:4px;
 }
+.loged a{
+    display:none;
+}
+.loged .user{
+  background-color:black;
+  color:white;
+  width: 30px;
+  height:30px;
+  display:flex;
+  align-items: center;
+  justify-content:center;
+  border-radius: 50%;
+}
